@@ -1,6 +1,6 @@
 DIST MP3Diags-0.99.05.031.tar.gz 888696 RMD160 09062066896f52eb24eff60d7ca4d600de22d5f0 SHA1 ac6379022c5529c8ed5ad92140f14d0553ce4d7e SHA256 b439ee10ba17dda9da55ff056d6b00566547fb65a6c86e8c6fe23a6fd4079219
 DIST MP3Diags_Src+Doc-0.99.05.031.tar.gz 2590922 RMD160 a81972190683495ecb0a4334ea3e4a88884289da SHA1 b016f4a444ff280751e7d300b898025754f6e2e1 SHA256 6ba65b9c977b16c77311bfa2c4fd956eb1bc47b98044b8973b9697515aadad9f
-EBUILD mp3diags-0.99.05.031.ebuild 1097 RMD160 d49e98fce6b1670173f1f56cbff27a5eb8fe3f1d SHA1 55cd7cb056fce0fd0e7aefb601a46b77d4a4e73d SHA256 2353ee25579ed1b4b9c7768812f8716cae225e59f08868374e535afca46eb349
-EBUILD mp3diags-9999.ebuild 1075 RMD160 3fa0d6042721bcd4acd5b424760894ed694ad739 SHA1 7c64d7b9e7528d5d048d6fd58cc1f5640634b21b SHA256 03f32febe7d446ba21d8836edbba8856bb6f8b9780512ccce4073cc6dfd3ef4d
-MISC ChangeLog 1615 RMD160 2afe631e169e7a2487546fd48778e25d3bbb958b SHA1 a8f5c78df1460e49e8605fc04e743047c9cea552 SHA256 3d2e2d6e575025316558d8c21783bf4dd65e6c31b2a9c888db8429e514140aca
+EBUILD mp3diags-0.99.05.031.ebuild 1115 RMD160 329becadf4c23f8970e617371c1514f17538d54f SHA1 c13d8172f17a975e85eb7bcbba6b6bd49b996ec6 SHA256 6be95ccc879feb55ab3230ba2c5d7ada3c810b3042686bcc99953dea8cec892b
+EBUILD mp3diags-9999.ebuild 1093 RMD160 9415c484909d877a83456bdb3a1b34fbadae6d02 SHA1 323beb615ee6120c86e3f137b5e3572de347b6a7 SHA256 7ec535a0a71bfec0d294d889e2a363676031e92164cfe6b958598964567c4352
+MISC ChangeLog 1752 RMD160 581e26e836668694cd74a1e41a05b49d8f45edca SHA1 1ad738586f18126bb30172c7e782eb8f0239b780 SHA256 6165a2b094f7ac8bfce3a91708f8c88f15e665ae094017e614544fbee9ee3429
 MISC metadata.xml 294 RMD160 a876c02ee69404aba92cd94beed6a238e0043581 SHA1 ac44a6cbf847ec1a492eaecbb7ffd6bce60a380d SHA256 43aeca91b633f1d854fba6e201a4321e46e96e4549361330926ea0e522cc00ba
