@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Aug 2009; Dominik Kapusta <d@ayoy.net> mp3diags-0.99.05.031.ebuild,
+  mp3diags-9999.ebuild:
+  Corrected RDEPEND to include qt-svg.
+
 *mp3diags-0.99.05.031 (19 Aug 2009)
 
   19 Aug 2009; Dominik Kapusta <d@ayoy.net> -mp3diags-0.99.05.030.ebuild,
